--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,14 @@ content:
 #        quote: >
 #          하루 1억건이 넘는 메일 수발신 처리
         description: | # this will include new lines to allow paragraphs
-          * My 구독 개발파트 - 2020.04 ~ 현재
+          * AI TF - 2024.07 ~ 현재
+            * GraphRAG
+          * 오픈채팅 개발파트 - 2024.05 ~ 현재
+          * 오픈링크 개발파트 - 2023.08 ~ 2024.04
+            * 대화방 추천, 푸셔 등
+          * 티스토리 개발파트 - 2022.06 ~ 2023.08
+            * 화이트 블로그 등
+          * My 구독 개발파트 - 2020.04 ~ 2022.06
             * My 구독 서비스 개발/운영 - Java, SpringBoot, Kafka, MySQL, Redis, Kubernetes 등
             * MSA 환경에서의 Web API 작성, Kafka를 이용한 Pub/Sub 구조의 데이터 처리
           * 메일개발파트 2012.01 ~ 2020.04
