--- a/_config.yml
+++ b/_config.yml
@@ -88,10 +88,10 @@ content:
 #          하루 1억건이 넘는 메일 수발신 처리
         description: | # this will include new lines to allow paragraphs
           * AI TF - 2024.07 ~ 현재
-            * GraphRAG
+            * GraphRAG를 이용한 지식베이스 구축
           * 오픈채팅 개발파트 - 2024.05 ~ 현재
           * 오픈링크 개발파트 - 2023.08 ~ 2024.04
-            * 대화방 추천, 푸셔 등
+            * 개인화 대화방 추천, 푸시 서버 개발
           * 티스토리 개발파트 - 2022.06 ~ 2023.08
             * 화이트 블로그 등
           * My 구독 개발파트 - 2020.04 ~ 2022.06
