Update _config.yml to reflect recent work and team changes
Added details about contributions to Tistory, OpenLink, and OpenChat services, and current involvement in the AI Native Company TF focusing on GraphRAG-based knowledge base development. Updated project timeline descriptions for improved accuracy.

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,8 @@ about_content: | # this will include new lines to allow paragraphs
   <mark>하루 수억 건</mark>의 메일을 주고받는 <mark>MAU 2천만 이상</mark>의 다음메일 서비스의 서버사이드 개발/운영한 경험이 있습니다.
   <mark>20년 이상</mark>의 오래된 서비스이자 수천만 유저의 대규모 트래픽 서비스를 **8년 이상** 운영하면서 다양한 인프라, 개발, 모니터링 환경을 경험하였고 다양한 장애 상황을 대처한 경험이 있습니다.
 
-  현재는 My 구독 서비스 신규 개발에 참여하여 서비스를 론칭하고 서비스를 발전시켜 나가고 있습니다.
+  My 구독 서비스 신규 개발에 참여하여 서비스를 론칭하였고, 티스토리, 오픈링크, 오픈채팅 등의 서비스를 개발에 참여하였습니다.
+  현재는 AI Native Company TF에서 GraphRAG를 이용한 지식베이스 구축에 참여하고 있습니다.
 
   일을 하며 쌓은 경험들은 문서화하고 동료들과 공유합니다.
   반복되는 작업은 스크립트로 자동화하고 운영툴을 개발하여 운영비용을 줄입니다.
@@ -87,7 +88,7 @@ content:
 #        quote: >
 #          하루 1억건이 넘는 메일 수발신 처리
         description: | # this will include new lines to allow paragraphs
-          * AI TF - 2024.07 ~ 현재
+          * AI Native Company TF - 2024.07 ~ 현재
             * GraphRAG를 이용한 지식베이스 구축
           * 오픈채팅 개발파트 - 2024.05 ~ 현재
           * 오픈링크 개발파트 - 2023.08 ~ 2024.04
