Update YouTube username in _config.yml
Changed the YouTube username from "JunHoKim" to "@junho85" for consistency with platform standards and to ensure correct linking in the site's configuration. No other modifications were made.

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ facebook_username: junho85
 linkedin_username: junho85
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: JunHoKim
+youtube_username: @junho85
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
