--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ facebook_username: junho85
 linkedin_username: junho85
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: @junho85
+youtube_username: JunHoKim
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
