--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,8 @@ content:
       - layout: left
         title: Back-end
         description: | # this will include new lines to allow paragraphs
-          * 주요: Java, Linux, MySQL, Kafka
-          * 기타: Kotlin, PostgreSQL, Oracle, RabbitMQ, C, Perl
+          * 주요: Java, Kotlin, Python, Linux, MySQL, Kafka
+          * 기타: PostgreSQL, C, Perl, Oracle, PHP, ETC
       - layout: left
         title: Front-end
         description: | # this will include new lines to allow paragraphs
